service-fraud.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: my-deploy-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30038
