ingress-fraud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  defaultBackend:
    service:
      name: api-service
      port:
        number: 8005
